--- a/blocks/v2-feature-carousel/v2-feature-carousel.css
+++ b/blocks/v2-feature-carousel/v2-feature-carousel.css
@@ -1,49 +1,41 @@
 :root {
-  --v2-feature-carousel-cards-gutter: 16px;
   --v2-feature-carousel-card-width: 150px;
   --v2-feature-carousel-card-height: 200px;
-  --v2-feature-carousel-icon-width: 48px;
-  --v2-feature-carousel-icon-height: 48px;
-  --v2-feature-carousel-svg-width: 24px;
-  --v2-feature-carousel-svg-height: 24px;
+  --v2-feature-carousel-icon-size: 48px;
+  --v2-feature-carousel-svg-size: 24px;
+  --v2-feature-carousel-border-radius: var(--border-radius);
 }
 
 .v2-feature-carousel-container {
   background-color: var(--c-grey-50);
 }
 
-.v2-feature-carousel-container .v2-feature-carousel-wrapper {
-  max-width: 1390px;
-  width: 100%;
-}
-
 .v2-feature-carousel__cards-list {
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  gap: var(--v2-feature-carousel-cards-gutter);
+  gap: 16px;
   scroll-snap-type: x mandatory;
   overflow: auto;
   flex-flow: row nowrap;
+  margin: auto;
 }
 
 .v2-feature-carousel__card {
   display: flex;
-  flex: 0 0 auto;
+  flex: none;
   width: var(--v2-feature-carousel-card-width);
   height: var(--v2-feature-carousel-card-height);
   padding: 24px;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  border-radius: 8px;
+  border-radius: var(--v2-feature-carousel-border-radius);
   background: var(--c-white);
   scroll-snap-align: center;
 }
 
 .v2-feature-carousel__card .icon {
-  width: var(--v2-feature-carousel-icon-width);
-  height: var( --v2-feature-carousel-icon-height);
+  width: var(--v2-feature-carousel-icon-size);
+  height: var( --v2-feature-carousel-icon-size);
   border: 1px solid var(--c-grey-3);
   border-radius: 50%;
   justify-content: center;
@@ -51,8 +43,8 @@
 }
 
 .v2-feature-carousel__card .icon svg {
-  width: var(--v2-feature-carousel-svg-width);
-  height: var(--v2-feature-carousel-svg-height);
+  width: var(--v2-feature-carousel-svg-size);
+  height: var(--v2-feature-carousel-svg-size);
 }
 
 .v2-feature-carousel__card .icon-graph svg {
@@ -63,10 +55,9 @@
   :root {
     --v2-feature-carousel-card-width: 200px;
     --v2-feature-carousel-card-height: 235px;
-    --v2-feature-carousel-icon-width: 64px;
-    --v2-feature-carousel-icon-height: 64px;
-    --v2-feature-carousel-svg-width: 32px;
-    --v2-feature-carousel-svg-height: 32px;
+    --v2-feature-carousel-icon-size: 64px;
+    --v2-feature-carousel-svg-size: 32px;
+    --v2-feature-carousel-border-radius: 10px;
   }
 
   .v2-feature-carousel__card {
