--- a/blocks/v2-feature-carousel/v2-feature-carousel.css
+++ b/blocks/v2-feature-carousel/v2-feature-carousel.css
@@ -1,5 +1,5 @@
 :root {
-  --v2-feature-carousel-padding: 32px 24px;
+  --v2-feature-carousel-padding: 32px 0;
   --v2-feature-carousel-card-padding: 24px;
   --v2-feature-carousel-card-width: 150px;
   --v2-feature-carousel-card-height: 200px;
@@ -12,8 +12,8 @@
   background-color: var(--c-grey-50);
 }
 
-.v2-feature-carousel-wrapper {
-  max-width: 1300px;
+.v2-feature-carousel-container .v2-feature-carousel-wrapper {
+  max-width: 1330px;
   width: 100%;
 }
 
@@ -34,7 +34,7 @@
   flex: 0 0 auto;
   width: var(--v2-feature-carousel-card-width);
   height: var(--v2-feature-carousel-card-height);
-  padding: var(--v2-feature-carousel-padding);
+  padding: var(--v2-feature-carousel-card-padding);
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
@@ -65,7 +65,6 @@
 
 @media screen and (min-width: 1200px) {
   :root {
-    --v2-feature-carousel-padding: 24px 34px;
     --v2-feature-carousel-card-padding: 32px 24px;
     --v2-feature-carousel-card-width: 200px;
     --v2-feature-carousel-card-height: 235px;
