--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -138,6 +138,14 @@
   padding: 16px;
 }
 
+.header__action-link.header__hamburger-menu {
+  padding: 0;
+  margin: 0;
+  background: inherit;
+  border: none;
+  justify-content: center;
+}
+
 .header__main-links {
   top: 102px;
   padding: 0 16px;
@@ -248,6 +256,10 @@
 
   .header__action-link-text {
     display: inline;
+  }
+
+  .icon.icon-user + .header__action-link-text {
+    display: none;
   }
 
   .header__close-menu {
