--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1202,52 +1202,67 @@ main.blue-contract .section.section-with-title p {
 }
 
 /* Headings classes styles */
-.redesign-v2 .h2 {
+.redesign-v2 .h1 {
   font-family: var(--ff-volvo-novum);
-
-  /* font-size: 56px; */
-  font-size: var(--f-heading-2-font-size);
-  font-style: normal;
-  font-weight: 300;
-  line-height: 110%;
-  letter-spacing: -0.5px;
+  font-size: var(--f-heading-1-font-size);
+  line-height: var(--f-heading-1-line-height);
+  letter-spacing: var(--f-heading-1-letter-spacing);
   font-feature-settings: 'clig' off, 'liga' off;
 }
 
-.redesign-v2 h4 {
+.redesign-v2 .h2 {
+  font-family: var(--ff-volvo-novum);
+  font-size: var(--f-heading-2-font-size);
+  line-height: var(--f-heading-2-line-height);
+  letter-spacing: var(--f-heading-2-letter-spacing);
+  font-feature-settings: 'clig' off, 'liga' off;
+}
+
+.redesign-v2 .h3 {
+  font-family: var(--ff-volvo-novum);
+  font-size: var(--f-heading-3-font-size);
+  line-height: var(--f-heading-3-line-height);
+  letter-spacing: var(--f-heading-3-letter-spacing);
+  font-feature-settings: 'clig' off, 'liga' off;
+}
+
+.redesign-v2 .h4 {
   font-family: var(--ff-volvo-novum-medium);
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 125%;
-  letter-spacing: 0.25px;
+  font-size: var(--f-heading-4-font-size);
+  line-height: var(--f-heading-4-line-height);
+  letter-spacing: var(--f-heading-4-letter-spacing);
   font-feature-settings: 'clig' off, 'liga' off;
 }
 
 .redesign-v2 .h5 {
   font-family: var(--ff-volvo-novum);
   font-size: var(--f-heading-5-font-size);
-  font-style: normal;
-  line-height: 125%;
+  line-height: var(--f-heading-5-line-height);
   font-feature-settings: 'clig' off, 'liga' off;
 }
 
 .redesign-v2 .h6 {
   font-family: var(--ff-volvo-novum-medium);
   font-size: var(--f-heading-6-font-size);
-  font-style: normal;
-  line-height: 125%;
-  letter-spacing: 0.15px;
+  line-height: var( --f-heading-6-line-height);
+  letter-spacing: var(--f-heading-6-letter-spacing);
   font-feature-settings: 'clig' off, 'liga' off;
 
 }
 
-.redesign-v2 .sub-2 {
+.redesign-v2 .subtitle-1 {
   font-family: var(--ff-volvo-novum-medium);
-  font-size: 14px;
-  font-style: normal;
-  line-height: 130%;
-  letter-spacing: 0.15px;
+  font-size: var(--f-subtitle-1-font-size);
+  line-height: var(--f-subtitle-1-line-height);
+  letter-spacing: var(--f-subtitle-1-letter-spacing);
+  font-feature-settings: 'clig' off, 'liga' off;
+}
+
+.redesign-v2 .subtitle-2 {
+  font-family: var(--ff-volvo-novum-medium);
+  font-size: var(--f-subtitle-2-font-size);
+  line-height: var(--f-subtitle-2-line-height);
+  letter-spacing: var(--f-subtitle-2-letter-spacing);
   font-feature-settings: 'clig' off, 'liga' off;
 }
 
