--- a/styles/styles.css
+++ b/styles/styles.css
@@ -162,13 +162,6 @@
   --c-warning-yellow: #F7D302;
 
   /* Global colors */
-  --c-background-card: #f7f7f7;
-  --volvo-text-gray: var(--c-grey-4);
-  --volvo-text-light-gray: var(--c-grey-2);
-  --text-color: var(--c-grey-4);
-  --btn-background-hover: var(--c-grey-1);
-  --input-background-color: var(--c-grey-1);
-  --overlay-background-color: var(--c-grey-1);
   --light-border-focus: #2B8EDE;
 
   /* Motions */
@@ -183,6 +176,14 @@
     OLD styles
     we need to remove / update once they are not used in the styles
   */
+
+  /* Global colors */
+  --volvo-text-gray: var(--c-grey-4);
+  --volvo-text-light-gray: var(--c-grey-2);
+  --text-color: var(--c-grey-4);
+  --btn-background-hover: var(--c-grey-1);
+  --input-background-color: var(--c-grey-1);
+  --overlay-background-color: var(--c-grey-1);
   --background-light-gray: #ebebeb;
   --highlight-background-color: #ccc;
   --btn-border-hover: #030333;
@@ -973,11 +974,11 @@ main.blue-contract .section.section-with-title p {
 
 /* REDESIGN GLOBAL STYLES */
 .redesign-v2 {
-  font-size: 16px;
-}
-
-:root.redesign-v2 {
+  --card-background: #f7f7f7;
+  --card-text: var(--c-main-black);
   --text-color: var(--c-main-black);
+
+  font-size: 16px;
 }
 
 .redesign-v2 ul {
@@ -995,6 +996,24 @@ main.blue-contract .section.section-with-title p {
   font-family: var(--ff-volvo-novum-medium);
   font-weight: 100;
 }
+
+/* Section Background colors */
+.section--black-background {
+  --text-color: var(--c-white);
+  --card-background: var(--c-white);
+
+  color: var(--text-color);
+  background-color: var(--c-main-black);
+}
+
+.section--gray-background {
+  --card-background: var(--c-white);
+  --card-text: var(--c-main-black);
+
+  background-color: var(--c-grey-50);
+}
+
+/* End section Background colors */
 
 :root.redesign-v2 .section {
   padding: 0;
@@ -1072,18 +1091,24 @@ main.blue-contract .section.section-with-title p {
   background-color: var(--c-grey-900);
 }
 
+.redesign-v2 .section--black-background a.button.primary,
+.redesign-v2 .section--black-background button.primary,
 .redesign-v2 a.button.primary.dark,
 .redesign-v2 button.primary.dark {
   background-color: var(--c-white);
   color: var(--c-main-black);
 }
 
+.redesign-v2 .section--black-background a.button.primary:hover,
+.redesign-v2 .section--black-background button.primary:hover,
 .redesign-v2 a.button.primary.dark:hover,
 .redesign-v2 button.primary.dark:hover {
   background-color: var(--c-grey-200);
   border-color: transparent;
 }
 
+.redesign-v2 .section--black-background a.button.primary:active,
+.redesign-v2 .section--black-background button.primary:active,
 .redesign-v2 a.button.primary.dark:active,
 .redesign-v2 button.primary.dark:active {
   background-color: var(--c-grey-400);
@@ -1105,17 +1130,23 @@ main.blue-contract .section.section-with-title p {
   background-color: var(--c-grey-100);
 }
 
+.redesign-v2 .section--black-background a.button.secondary,
+.redesign-v2 .section--black-background button.secondary,
 .redesign-v2 a.button.secondary.dark,
 .redesign-v2 button.secondary.dark {
   border: 1px solid var(--c-white);
   color: var(--c-white);
 }
 
+.redesign-v2 .section--black-background a.button.secondary:hover,
+.redesign-v2 .section--black-background button.secondary:hover,
 .redesign-v2 a.button.secondary.dark:hover,
 .redesign-v2 button.secondary.dark:hover {
   background-color: var(--c-grey-900);
 }
 
+.redesign-v2 .section--black-background a.button.secondary:active,
+.redesign-v2 .section--black-background button.secondary:active,
 .redesign-v2 a.button.secondary.dark:active,
 .redesign-v2 button.secondary.dark:active {
   background-color: var(--c-grey-800);
@@ -1138,17 +1169,23 @@ main.blue-contract .section.section-with-title p {
   background-color: var(--c-grey-100);
 }
 
+.redesign-v2 .section--black-background a.button.tertiary,
+.redesign-v2 .section--black-background button.tertiary,
 .redesign-v2 a.button.tertiary.dark,
 .redesign-v2 button.tertiary.dark {
   color: var(--c-white);
   background-color: var(--c-main-black);
 }
 
+.redesign-v2 .section--black-background a.button.tertiary:hover,
+.redesign-v2 .section--black-background button.tertiary:hover,
 .redesign-v2 a.button.tertiary.dark:hover,
 .redesign-v2 button.tertiary.dark:hover {
   background-color: var(--c-grey-900);
 }
 
+.redesign-v2 .section--black-background a.button.tertiary:active,
+.redesign-v2 .section--black-background button.tertiary:active,
 .redesign-v2 a.button.tertiary.dark:active,
 .redesign-v2 button.tertiary.dark:active {
   background-color: var(--c-grey-800);
@@ -1170,17 +1207,23 @@ main.blue-contract .section.section-with-title p {
   background-color: var(--c-cta-blue-active);
 }
 
+.redesign-v2 .section--black-background a.button.marketing-cta,
+.redesign-v2 .section--black-background button.marketing-cta,
 .redesign-v2 a.button.marketing-cta.dark,
 .redesign-v2 button.marketing-cta.dark {
   background-color: #44A1FF;
   color: var(--c-main-black);
 }
 
+.redesign-v2 .section--black-background a.button.marketing-cta:hover,
+.redesign-v2 .section--black-background button.marketing-cta:hover,
 .redesign-v2 a.button.marketing-cta.dark:hover,
 .redesign-v2 button.marketing-cta.dark:hover {
   background-color: #76BAFF;
 }
 
+.redesign-v2 .section--black-background a.button.marketing-cta:active,
+.redesign-v2 .section--black-background button.marketing-cta:active,
 .redesign-v2 a.button.marketing-cta.dark:active,
 .redesign-v2 button.marketing-cta.dark:active {
   background-color: #1F78D1;
