adjusts based on comments

--- a/blocks/text/text.css
+++ b/blocks/text/text.css
@@ -2,12 +2,12 @@
   font-size: var(--heading-s-font-size);
   line-height: var(--heading-s-line-height);
   letter-spacing: var(--heading-s-letter-spacing);
-  margin: 24px 0;
+  padding: 24px 0;
 }
 
 @media screen and (min-width: 768px) {
   .text {
-    margin: 40px 0;
+    padding: 40px 0;
   }
 }
 
@@ -20,65 +20,65 @@
 }
 
 .text.left {
-    text-align: left;
+  text-align: left;
 }
 
 .text.center {
-    text-align: center;
+  text-align: center;
 }
 
 .text.right {
-    text-align: right;
+  text-align: right;
 }
 
 .text.bold {
-    font-family: var(--ff-volvo-novum-medium);
-    font-weight: bold;
+  font-family: var(--ff-volvo-novum-medium);
+  font-weight: bold;
 }
 
 div.text.l p {
-    font-size:   var(--body-font-size-l);
+  font-size: var(--body-font-size-l);
 }
 
 div.text.m p {
-    font-size:   var(--body-font-size-m);
+  font-size: var(--body-font-size-m);
 }
 
 div.text.s p {
-    font-size:   var(--body-font-size-s);
+  font-size: var(--body-font-size-s);
 }
 
 div.text.xs p {
-    font-size:   var(--body-font-size-xs);
+  font-size: var(--body-font-size-xs);
 }
 
 div.text.xxs p {
-    font-size:   var(--body-font-size-xxs);
+  font-size: var(--body-font-size-xxs);
 }
 
 div.text.black {
-    color: var(--text-color);
+  color: var(--text-color);
 }
 
 div.text.alert.block {
-    background-color: #efefef;
-    display: flex;
+  background-color: #efefef;
+  display: flex;
 }
 
 div.text.alert.block img {
-    height: auto;
-    max-width: 40px;
+  height: auto;
+  max-width: 40px;
 }
 
-div.text.alert.block > div:first-of-type {
-    padding-left: 70px;
-    padding-right: 40px;
-    padding-top: 20px;
-    margin-right: 15px;
+div.text.alert.block>div:first-of-type {
+  padding-left: 70px;
+  padding-right: 40px;
+  padding-top: 20px;
+  margin-right: 15px;
 }
 
-div.text.alert.block > div:last-of-type {
-    margin-right: 15px;
+div.text.alert.block>div:last-of-type {
+  margin-right: 15px;
 }
 
 div.text p.button-container {
