--- a/blocks/v2-hero/v2-hero.css
+++ b/blocks/v2-hero/v2-hero.css
@@ -31,6 +31,10 @@
   position: relative;
 }
 
+.section.v2-hero-container {
+  padding-bottom: 0;
+}
+
 .v2-hero__image,
 .v2-hero__video {
   height: 100%;
