#3 Fix close button in list

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -54,8 +54,8 @@
   display: flex;
   align-items: center;
   position: absolute;
+  margin-top: 16px;
   right: 16px;
-  top: 32px;
   height: 24px;
 }
 
